# threadedFFI-Plugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Jenkinsfile  README.md  linux.cmake  macros.cmake  osx.cmake  win.cmake
.github/workflows/: continuous-integration-workflow.yaml
plugin/: Makefile  Makefile.common  Makefile.linux  Makefile.osx  Makefile.osx32  Makefile.osx64  Makefile.windows
plugin-st/ThreadedFFI-Plugin.package/PThreadedPlugin.class/: properties.json
plugin-st/ThreadedFFI-Plugin.package/monticello.meta/: categories.st
plugin/ThreadedFFI-Plugin.package/PThreadedPlugin.class/: methodProperties.json
plugin/ThreadedFFI-Plugin.package/monticello.meta/: package  version
plugin/includes/: PThreadedPlugin.h  callbacks.h  pharoSemaphore.h  platformSemaphore.h  threadSafeQueue.h  utils.h  worker.h  workerTask.h
plugin/src/: PThreadedPlugin.c  PThreadedPlugin.h  callbacks.c  callbacks.h  calloutAPI.c  calloutWorker.c  functionDefinitionPrimitives.c  macros.h  pharoSemaphore.c  pharoSemaphore.h  platformSemaphore.c  platformSemaphore.h  primitiveCalls.c  primitiveUtils.c  semaphore.c  semaphore.h  semaphoreWrapper.c  semaphoreWrapper.h  sqPThreaded.c  threadSafeQueue.c  threadSafeQueue.h  types.c  typesPrimitives.c  utils.c  utils.h  worker.c  worker.h  workerPrimitives.c  workerTask.c  workerTask.h
plugin/src/callbacks/: callbackPrimitives.c  callbacks.c  callbacks.h
plugin/src/queue/: threadSafeQueue.c  threadSafeQueue.h
plugin/src/sameThread/: sameThread.c
plugin/src/semaphores/: pharoSemaphore.c
plugin/src/worker/: worker.c  worker.h  workerCallbacks.c  workerPrimitives.c  workerTask.c  workerTask.h
scripts/: buildPlugin.sh  buildTestLibrary.sh  getArch.sh  getOS.sh  installCygwin.ps1  makeDevImage.sh  test.sh  testLinux.sh  testOSX.sh  testWindows.sh  updateDevLibs.sh  updateIceberg.st
src/BaselineOfThreadedFFI/: BaselineOfThreadedFFI.class.st
src/BaselineOfThreadedFFIMigration/: BaselineOfThreadedFFIMigration.class.st  package.st
src/CallbackTests.package/monticello.meta/: categories.st  package
src/ThreadedFFI/: ExternalAddress.extension.st  ExternalData.extension.st  ExternalFunction.extension.st  ExternalObject.extension.st  FFIBoolean32.class.st  FFICallback.extension.st  FFILibrary.extension.st  PointerUtils.class.st  TFAbstractType.class.st  TFBasicType.class.st  TFBoolean32Type.class.st  TFBooleanType.class.st  TFCallTypeAsync.class.st  TFCallTypeAsyncInQueue.class.st  TFCallTypeSync.class.st  TFCallTypeWorker.class.st  TFCallback.class.st  TFCallbackExecutor.class.st  TFCallbackForkRunStrategy.class.st  TFCallbackInvocation.class.st  TFCallbackQueue.class.st  TFCallbackQueuedReturnRunStrategy.class.st  TFCallbackSameProcessRunStrategy.class.st  TFCharType.class.st  TFDerivedType.class.st  TFDoubleType.class.st  TFExternalAsyncCall.class.st  TFExternalAsyncCallInQueue.class.st  TFExternalFunction.class.st  TFExternalFunctionCallType.class.st  TFExternalSyncCall.class.st  TFExternalWorkerCall.class.st  TFFIBackend.class.st  TFFloatType.class.st  TFFunctionDefinition.class.st  TFIncorrectOrderCallbackReturn.class.st  TFIntType.class.st  TFMainThreadRunner.class.st  TFOOPType.class.st  TFPointerToStructType.class.st  (+11 more)
src/ThreadedFFI-Tests/: TFBasicTypeMarshallingInCallbacksTest.class.st  TFBasicTypeMarshallingTest.class.st  TFBasicTypeSizeTest.class.st  TFBasicTypeTest.class.st  TFCallbacksTest.class.st  TFFunctionCallTest.class.st  TFPointTestStruct.class.st  TFReentreantCallbacksTest.class.st  TFStructTest.class.st  TFTestCase.class.st  TFTestResource.class.st  TFWorkerManagerTest.class.st  TFWorkerTest.class.st
src/ThreadedFFI-UFFI/: Behavior.extension.st  FFIBool.extension.st  FFICallback.extension.st  FFICharacterType.extension.st  FFIConst.extension.st  FFIExternalReferenceType.extension.st  FFIExternalString.extension.st  FFIExternalStructureType.extension.st  FFIExternalType.extension.st  FFIFloat32.extension.st  FFIFloat64.extension.st  FFIInt16.extension.st  FFIInt32.extension.st  FFIInt64.extension.st  FFIInt8.extension.st  FFILibrary.extension.st  FFILong.extension.st  FFIOop.extension.st  FFISizeT.extension.st  FFITypeArrayType.extension.st  FFIUInt16.extension.st  FFIUInt32.extension.st  FFIUInt64.extension.st  FFIUInt8.extension.st  FFIULong.extension.st  FFIVoid.extension.st  TFBasicType.extension.st  TFCalloutAPI.class.st  TFCalloutMethodBuilder.class.st
src/ThreadedFFI-UFFI-Overrides/: ExternalAddress.extension.st  FFIArchitecture.extension.st  FFICallback.extension.st  FFICalloutAPI.extension.st  FFICalloutMethodBuilder.extension.st  Object.extension.st
src/ThreadedFFI-UFFI-Tests/: BenchTFFIPlugin.class.st  TFBasicTypeSizeFrontendTest.class.st  TFTestLibrary.class.st  TFTestLibraryUsingSameThreadRunner.class.st  TFTestLibraryUsingWorker.class.st  TFUFFIBasicTypeMarshallingInCallbacksTest.class.st  TFUFFIBasicTypeMarshallingTest.class.st  TFUFFIBasicTypeSizeTest.class.st  TFUFFICallbackTest.class.st  TFUFFIDerivedTypeMarshallingTest.class.st  TFUFFIDerivedTypeSizeTest.class.st  TFUFFIFailingCallbackWithDefault.class.st  TFUFFIFunctionCallTest.class.st  TFUFFIMarshallingInCallbacksTest.class.st  TFUFFIStructuresTest.class.st  TFUFFITestCase.class.st  TUFFIFunctionCallTest.class.st
src/ThreadedFFIMigration/: FFICallback.extension.st  LGitCallback.extension.st  LGitLibrary.extension.st  TFBasicType.extension.st  TFCalloutAPI.extension.st  ThreadedFFIMigration.class.st  package.st
src/UnifiedFFI/: ExternalAddress.extension.st  ExternalData.extension.st  FFIAlienCallback.class.st  FFICallback.class.st  FFICallbackArgumentReader.class.st  FFICallout.class.st  FFICalloutAPI.class.st  FFICalloutMethodBuilder.class.st  FFICompilerPlugin.class.st  FFIConst.class.st  FFIExternalEnumeration.class.st  FFIFunctionParser.class.st  FFILibrary.class.st  Object.extension.st
src/UnifiedFFI-Tests/: FFICallbackTests.class.st  FFICalloutTests.class.st  FFITestNestingStructureWithArray.class.st
testLibrary/src/: Makefile.linux  Makefile.osx  callbacks.c
(+45 files in other folders)
